# moto-tracker-route-api

./: Cargo.toml  Dockerfile  README.md  map.html
src/: graph.rs  main.rs  osm_graph.rs  osm_reader.rs  route_calculation.rs
static/: test.txt
