[package]
name = "moto-trackr-route-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
osmpbfreader = "0.16.0"
osm4routing = "*"
kml = "0.8.1"
serde = "1.0.130"
serde_json = "1.0.99"

# Shuttle
shuttle-actix-web = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = "1.26.0"
shuttle-static-folder = "0.20.0"
reqwest = "0.11.18"
chrono = "0.4.26"
log = "0.4.19"
rand = "0.8.5"
actix-cors = "0.6.4"
